# SouthAI-Safety-hackathon

./: .gitignore  PATHS.py  README.md  pyproject.toml  safe_200.csv
models/: merge_datasets.py
output/modified_advbench/qwen_0.5b_instruct/: responses.jsonl  run_metadata.json
output/modified_advbench/qwen_0.5b_instruct/alignment_brittleness/: rq1_alignment_metrics.json  rq1_alignment_per_prompt.csv
output/modified_advbench/qwen_1.5b_instruct/: responses.jsonl  run_metadata.json
output/modified_advbench/qwen_1.5b_instruct/alignment_brittleness/: rq1_alignment_metrics.json  rq1_alignment_per_prompt.csv
output/modified_advbench/qwen_1.5b_instruct/ma_qwen_1_5b/: split_indices.json
output/xstest/qwen_0.5b_instruct/: responses.jsonl  run_metadata.json
output/xstest/qwen_0.5b_instruct/alignment_brittleness/: rq1_alignment_metrics.json  rq1_alignment_per_prompt.csv
output/xstest/qwen_0.5b_instruct/xst_qwen_0_5b/: split_indices.json
output/xstest/qwen_1.5b_instruct/: responses.jsonl  run_metadata.json
output/xstest/qwen_1.5b_instruct/alignment_brittleness/: rq1_alignment_metrics.json  rq1_alignment_per_prompt.csv
scripts/data_processing/: data_processing.py
scripts/expt_codes/: inference_with_activations.py  inspect_probe_training.ipynb
