[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
